--- a/ManageGo/Views/CreateTicketPage.xaml
+++ b/ManageGo/Views/CreateTicketPage.xaml
@@ -45,7 +45,7 @@
             </StackLayout>
             <ScrollView Grid.Row="2"
                         BackgroundColor="{StaticResource Grey-Light-2}">
-              
+
                 <StackLayout>
 
                     <Frame BackgroundColor="White"
@@ -161,6 +161,17 @@
                                    Grid.Column="0"
                                    Grid.Row="4"
                                    TextColor="{StaticResource Key=Grey-Mid-1}" />
+                            <BoxView Grid.Row="5"
+                                     IsVisible="{Binding ExtraDetailRowsAreVisible}"
+                                     HeightRequest="1"
+                                     VerticalOptions="Center"
+                                     BackgroundColor="{StaticResource Grey-Light-2}"
+                                     Grid.ColumnSpan="2" />
+                            <Label Text="Category"
+                                   FontSize="Small"
+                                   Grid.Column="0"
+                                   Grid.Row="6"
+                                   TextColor="{StaticResource Key=Grey-Mid-1}" />
                             <Frame HasShadow="false"
                                    BorderColor="{StaticResource Grey-Light-1}"
                                    CornerRadius="0"
@@ -168,7 +179,7 @@
                                    BackgroundColor="{StaticResource Key=Grey-Light-2}"
                                    VerticalOptions="FillAndExpand"
                                    HorizontalOptions="FillAndExpand"
-                                   Grid.Row="6"
+                                   Grid.Row="7"
                                    Padding="8,12,0,12">
                                 <StackLayout Orientation="Horizontal">
                                     <Label Text="More ticket details"
@@ -191,19 +202,9 @@
                                    Grid.Column="0"
                                    Grid.Row="8"
                                    TextColor="{StaticResource Key=Grey-Mid-1}" />
-                            <BoxView Grid.Row="9"
-                                     IsVisible="{Binding ExtraDetailRowsAreVisible}"
-                                     HeightRequest="1"
-                                     VerticalOptions="Center"
-                                     BackgroundColor="{StaticResource Grey-Light-2}"
-                                     Grid.ColumnSpan="2" />
-                            <Label Text="Category"
-                                   IsVisible="{Binding ExtraDetailRowsAreVisible}"
-                                   FontSize="Small"
-                                   Grid.Column="0"
-                                   Grid.Row="10"
-                                   TextColor="{StaticResource Key=Grey-Mid-1}" />
-                            <BoxView Grid.Row="11"
+
+
+                            <BoxView Grid.Row="10"
                                      IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                      HeightRequest="1"
                                      VerticalOptions="Center"
@@ -213,9 +214,9 @@
                                    IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                    FontSize="Small"
                                    Grid.Column="0"
-                                   Grid.Row="12"
+                                   Grid.Row="11"
                                    TextColor="{StaticResource Key=Grey-Mid-1}" />
-                            <BoxView Grid.Row="13"
+                            <BoxView Grid.Row="12"
                                      IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                      HeightRequest="1"
                                      VerticalOptions="Center"
@@ -225,9 +226,9 @@
                                    IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                    FontSize="Small"
                                    Grid.Column="0"
-                                   Grid.Row="14"
+                                   Grid.Row="13"
                                    TextColor="{StaticResource Key=Grey-Mid-1}" />
-                            <BoxView Grid.Row="15"
+                            <BoxView Grid.Row="14"
                                      IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                      HeightRequest="1"
                                      VerticalOptions="Center"
@@ -237,7 +238,7 @@
                                    IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                    FontSize="Small"
                                    Grid.Column="0"
-                                   Grid.Row="16"
+                                   Grid.Row="15"
                                    TextColor="{StaticResource Key=Grey-Mid-1}" />
 
                             <!-- second column for Address selection -->
@@ -398,7 +399,7 @@
                             <!-- second column due date-->
                             <StackLayout IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                          Grid.ColumnSpan="2"
-                                         Grid.Row="16">
+                                         Grid.Row="15">
                                 <StackLayout Orientation="Horizontal"
                                              VerticalOptions="CenterAndExpand">
                                     <Label Text="DueDate  "
@@ -474,9 +475,9 @@
                             </StackLayout>
 
                             <!-- Categories -->
-                            <StackLayout IsVisible="{Binding ExtraDetailRowsAreVisible}"
+                            <StackLayout 
                                          Grid.Column="1"
-                                         Grid.Row="10">
+                                         Grid.Row="6">
                                 <StackLayout Orientation="Horizontal"
                                              VerticalOptions="CenterAndExpand">
                                     <Label Text="{Binding CategoryLabelText}"
@@ -529,7 +530,7 @@
                             <!-- second column Tags -->
                             <StackLayout IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                          Grid.Column="1"
-                                         Grid.Row="12">
+                                         Grid.Row="11">
                                 <StackLayout Orientation="Horizontal"
                                              VerticalOptions="CenterAndExpand">
                                     <Label Text="{Binding TagLabelText}"
@@ -582,7 +583,7 @@
                             <!-- second column Assigned Users -->
                             <StackLayout IsVisible="{Binding ExtraDetailRowsAreVisible}"
                                          Grid.Column="1"
-                                         Grid.Row="14">
+                                         Grid.Row="13">
                                 <StackLayout Orientation="Horizontal"
                                              VerticalOptions="CenterAndExpand">
                                     <Label Text="{Binding AssignedLabelText}"
