--- a/ManageGo/Views/MasterMenuPage.xaml
+++ b/ManageGo/Views/MasterMenuPage.xaml
@@ -41,7 +41,7 @@
                     <Button Text="Payments" Command="{Binding PaymentsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
-                <Grid Margin="0,0,4,0">
+                <Grid Margin="0,0,4,0" IsVisible="{Binding PaymentsIsVisible}">
                     <Label Text="Bank transactions" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Bank transactions" Command="{Binding OnTransactionsTapped}" VerticalOptions="CenterAndExpand" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="FillAndExpand"/>
                 </Grid>
@@ -51,10 +51,11 @@
                     <Button Text="Maintenance" Command="{Binding OnMaintenanceTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView IsVisible="true" BackgroundColor="{StaticResource Grey-Light-2}"/>
-                <Grid Margin="0,0,4,0" IsVisible="{Binding MaintenanceIsVisible}">
+                <!--
+                <Grid Margin="0,0,4,0">
                     <Label Text="Amenities" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Amenities" Command="{Binding OnAmenitiesTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
-                </Grid>
+                </Grid> -->
                 <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
                     <Label Text="Calendar" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
@@ -66,7 +67,7 @@
                     <Button Text="Buildings" Command="{Binding OnBuildingsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
-                <Grid Margin="0,0,4,0">
+                <Grid Margin="0,0,4,0" IsVisible="{Binding TenantIsVisible}">
                     <Label Text="Tenants" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Tenants" Command="{Binding OnTenantsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="Fill"/>
                 </Grid>
