--- a/ManageGo/Views/MasterMenuPage.xaml
+++ b/ManageGo/Views/MasterMenuPage.xaml
@@ -55,9 +55,11 @@
                 <Grid Margin="0,0,4,0">
                     <Label Text="Amenities" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Amenities" Command="{Binding OnAmenitiesTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
-                </Grid> -->
+                </Grid>
+                -->
+
                 <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
-                <Grid Margin="0,0,4,0">
+                <Grid Margin="0,0,4,0" IsVisible="{Binding MaintenanceIsVisible}">
                     <Label Text="Calendar" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Calendar" Command="{Binding OnCalendarPageTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
