--- a/ManageGo/Views/BookingCalendarPage.xaml
+++ b/ManageGo/Views/BookingCalendarPage.xaml
@@ -6,7 +6,7 @@
              xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Name="ThisPage"
              xmlns:local="clr-namespace:ManageGo"
-             x:Class="ManageGo.AmenitiesListPage">
+             x:Class="ManageGo.BookingCalendarPage">
     <ContentPage.Resources>
         <local:UrlToImageSource x:Key="UrlToImageSource" />
         <local:StringToBoolConverter x:Key="StringToBoolConverter" />
@@ -62,7 +62,7 @@
             <BoxView HeightRequest="1"
                          BackgroundColor="{StaticResource Primary}" />
         </StackLayout>
-        <Button Grid.Row="2" Text="View calendar" Command="{Binding OnViewCalendarTapped}" VerticalOptions="CenterAndExpand" Padding="0,10,0,0" BackgroundColor="{StaticResource Grey-Light-2}"/>
+        <Button Grid.Row="2" Text="View calendar" VerticalOptions="CenterAndExpand" Padding="0,10,0,0" BackgroundColor="{StaticResource Grey-Light-2}"/>
         <StackLayout BackgroundColor="{StaticResource Grey-Light-2}"
                          Grid.Row="3">
             <controls:CustomListView ItemsSource="{Binding Bookings}"
