--- a/ManageGo/Views/LoginPage.xaml
+++ b/ManageGo/Views/LoginPage.xaml
@@ -34,6 +34,8 @@
                            HorizontalOptions="CenterAndExpand" />
                     <local:CustomEntry Placeholder="Enter your email"
                                        AutomationId="email_entry"
+                                       TextColor="Black"
+                                      
                                        Text="{Binding UserEmail}" />
                     <BoxView HeightRequest="1"
                              Margin="0,-4,0,0"
@@ -44,6 +46,8 @@
                            FontSize="Small"
                            HorizontalOptions="CenterAndExpand" />
                     <local:CustomEntry Placeholder="Password"
+                                       TextColor="Black"
+                                     
                                        AutomationId="password_entry"
                                        Text="{Binding UserPassword}"
                                        IsPassword="true" />
