--- a/ManageGo/Views/AmenitiesListPage.xaml
+++ b/ManageGo/Views/AmenitiesListPage.xaml
@@ -11,114 +11,119 @@
         <local:UrlToImageSource x:Key="UrlToImageSource" />
         <local:StringToBoolConverter x:Key="StringToBoolConverter" />
     </ContentPage.Resources>
+    <RelativeLayout>
 
-
-    <Grid RowSpacing="0"
-          
-              RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,
-                             Property=Height, Factor=1, Constant=0}"
-              RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,
-                             Property=Width, Factor=1, Constant=0}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <StackLayout Grid.Row="0"
+        <Grid RowSpacing="0"   RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height, Factor=1}"
+              RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width, Factor=1}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackLayout Grid.Row="0"
                          BackgroundColor="White"
                          Orientation="Horizontal"
                          Padding="8"
                          HeightRequest="42">
-            <Button BackgroundColor="Transparent"
+                <Button BackgroundColor="Transparent"
                         Command="{Binding OnMasterMenuTapped}"
                         HorizontalOptions="Start"
                         WidthRequest="42"
                         IsVisible="{Binding HamburgerIsVisible}"
                         VerticalOptions="CenterAndExpand"
                         Image="nav_menu_icon.png" />
-            <Image Source="logo.png"
+                <Image Source="logo.png"
                        Margin="-50,0,0,0"
                        VerticalOptions="CenterAndExpand"
                        HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-        <StackLayout Spacing="0"
+            </StackLayout>
+            <StackLayout Spacing="0"
                          Grid.Row="1"
                          BackgroundColor="White">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-                <Label Text="Bookings"
+                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+                    <Label Text="Bookings"
                        TextColor="{StaticResource Grey-Dark-1}"
                        FontAttributes="Bold"
                        Margin="0,8,0,7"
                        FontSize="Medium"
                        HorizontalTextAlignment="Center" />
-                <Label Text="{Binding PendingString}"
+                    <Label Text="{Binding PendingString}"
                        TextColor="{StaticResource Red}"
                        FontAttributes="Bold"
                        Margin="0,8,0,7"
                        FontSize="Medium"
                        HorizontalTextAlignment="Center" />
-            </StackLayout>
-            <BoxView HeightRequest="1"
+                </StackLayout>
+                <BoxView HeightRequest="1"
                          BackgroundColor="{StaticResource Primary}" />
-        </StackLayout>
-        <Button Grid.Row="2" Text="View calendar" Command="{Binding OnViewCalendarTapped}" VerticalOptions="CenterAndExpand" Padding="0,10,0,0" BackgroundColor="{StaticResource Grey-Light-2}"/>
-        <StackLayout BackgroundColor="{StaticResource Grey-Light-2}"
+            </StackLayout>
+            <Button Grid.Row="2" Text="View calendar" Command="{Binding OnViewCalendarTapped}" VerticalOptions="CenterAndExpand" Padding="0,10,0,0" BackgroundColor="{StaticResource Grey-Light-2}"/>
+            <StackLayout BackgroundColor="{StaticResource Grey-Light-2}"
                          Grid.Row="3">
-            <controls:CustomListView ItemsSource="{Binding Bookings}"
+                <controls:CustomListView ItemsSource="{Binding Bookings}"
                                          SelectionMode="None"
                                          HasUnevenRows="true"
                                          BackgroundColor="Transparent"
                                          SeparatorVisibility="None"
                                          Margin="22,18,22,18">
-                <x:Arguments>
-                    <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
-                </x:Arguments>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <Frame HasShadow="false"
+                    <x:Arguments>
+                        <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
+                    </x:Arguments>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Frame HasShadow="false"
                                        BackgroundColor="White"
                                        Margin="0,0,0,12"
                                        Padding="8">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Label Text="•" Grid.Row="0" VerticalOptions="StartAndExpand" VerticalTextAlignment="Start" FontSize="43" Grid.Column="0" Margin="0,-14,0,0" TextColor="{Binding StatusTextColor}"/>
-                                    <Grid Grid.Column="1" Grid.Row="0">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                        </Grid.RowDefinitions>
+                                    <Grid>
                                         <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="0.33*" />
                                         </Grid.ColumnDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="{Binding TenantName}" FontSize="Default" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold"/>
-                                        <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
-                                            <Label Text="{Binding AmenityName}" FontSize="Caption" TextColor="{StaticResource Grey-Mid-1}"/>
-                                            <Image  WidthRequest="25" HeightRequest="25" Source="{Binding LinkUrl, Converter={StaticResource UrlToImageSource}}" />
-                                        </StackLayout>
+                                        <Label Text="•" Grid.Row="0" VerticalOptions="StartAndExpand" VerticalTextAlignment="Start" FontSize="43" Grid.Column="0" Margin="0,-14,0,0" TextColor="{Binding StatusTextColor}"/>
+                                        <Grid Grid.Column="1" Grid.Row="0">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="0.33*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Label Grid.Row="0" Grid.Column="0" Text="{Binding TenantName}" FontSize="Default" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold"/>
+                                            <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
+                                                <Label Text="{Binding AmenityName}" FontSize="Caption" TextColor="{StaticResource Grey-Mid-1}"/>
+                                                <Image  WidthRequest="25" HeightRequest="25" Source="{Binding LinkUrl, Converter={StaticResource UrlToImageSource}}" />
+                                            </StackLayout>
 
-                                        <Label Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding DisplayDateTime}" FontSize="Caption" TextColor="{StaticResource Grey-Mid-1}"/>
-                                        <BoxView Grid.Row="2" Grid.ColumnSpan="2" HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="{StaticResource Grey-Light-2}" />
-                                        <StackLayout Grid.Row="3" Grid.Column="0" Orientation="Horizontal">
-                                            <Image Source="building_grey.png" VerticalOptions="CenterAndExpand"/>
-                                            <Label VerticalOptions="CenterAndExpand" VerticalTextAlignment="End" Text="{Binding DisplayAddress}" FontSize="Caption" TextColor="{StaticResource Grey-Light-1}"/>
-                                        </StackLayout>
-                                        <Label Grid.Row="3" Grid.Column="1" HorizontalOptions="End" FontSize="Caption" Text="{Binding Status}" TextColor="{Binding StatusTextColor}"/>
+                                            <Label Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding DisplayDateTime}" FontSize="Caption" TextColor="{StaticResource Grey-Mid-1}"/>
+                                            <BoxView Grid.Row="2" Grid.ColumnSpan="2" HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="{StaticResource Grey-Light-2}" />
+                                            <StackLayout Grid.Row="3" Grid.Column="0" Orientation="Horizontal">
+                                                <Image Source="building_grey.png" VerticalOptions="CenterAndExpand"/>
+                                                <Label VerticalOptions="CenterAndExpand" VerticalTextAlignment="End" Text="{Binding DisplayAddress}" FontSize="Caption" TextColor="{StaticResource Grey-Light-1}"/>
+                                            </StackLayout>
+                                            <Label Grid.Row="3" Grid.Column="1" HorizontalOptions="End" FontSize="Caption" Text="{Binding Status}" TextColor="{Binding StatusTextColor}"/>
+                                        </Grid>
                                     </Grid>
-                                </Grid>
-                            </Frame>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </controls:CustomListView>
-        </StackLayout>
-    </Grid>
-
+                                </Frame>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </controls:CustomListView>
+            </StackLayout>
+        </Grid>
+        <Image Source="plus_1_1.png"
+               x:Name="CreateBookingButton"
+               RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width, Factor=1, Constant=-90}"
+               RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height, Factor=1, Constant=-90}">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer NumberOfTapsRequired="1"
+                                      Command="{Binding OnCreateButtonTapped}" />
+            </Image.GestureRecognizers>
+        </Image>
+    </RelativeLayout>
 </ContentPage>
