--- a/ManageGo/Views/TenantFilterSelectView.xaml
+++ b/ManageGo/Views/TenantFilterSelectView.xaml
@@ -10,7 +10,7 @@
         <local:BoolToCheckBoxIconSource x:Key="BoolToCheckBoxIconSource" />
     </ContentView.Resources>
     <ScrollView Padding="12,0,12,0">
-       
+
         <StackLayout Spacing="0">
             <StackLayout Padding="21,17,21,17"
                          Spacing="0">
@@ -20,6 +20,8 @@
                     <local:CustomEntry Placeholder="Search tenant name..."
                                        Text="{Binding FilterKeywords}"
                                        FontSize="Small"
+                                       TextColor="Black"
+                                       BackgroundColor="White"
                                        HorizontalOptions="FillAndExpand" />
                 </StackLayout>
                 <BoxView HeightRequest="1"
