--- a/ManageGo/Views/TicketFilterSelectView.xaml
+++ b/ManageGo/Views/TicketFilterSelectView.xaml
@@ -16,9 +16,11 @@
                 <StackLayout Orientation="Horizontal"
                              Padding="0,6">
                     <Image Source="search_grey" />
-                    <local:CustomEntry Placeholder="keywords..."
+                    <local:CustomEntry Placeholder="Search..."
                                        Text="{Binding FilterKeywords}"
                                        FontSize="Small"
+                                       TextColor="Black"
+                                       BackgroundColor="White"
                                        HorizontalOptions="FillAndExpand" />
                 </StackLayout>
                 <BoxView HeightRequest="1"
