--- a/ManageGo/Controls/CalendarView.xaml
+++ b/ManageGo/Controls/CalendarView.xaml
@@ -79,6 +79,7 @@
            Margin="0,-20,0,0"
            WidthRequest="25"
            HeightRequest="25"
+           IsVisible="{Binding AllowPastSelection}"
            VerticalOptions="Center">
         <Image.GestureRecognizers>
             <TapGestureRecognizer NumberOfTapsRequired="1"
@@ -90,6 +91,8 @@
                        Grid.Row="2"
                        HeightRequest="310"
                        VerticalOptions="Center"
+                       ShowDisabledDates="{Binding ShowDisabledDates}"
+                       AvailableDays="{Binding AvailableDays}"
                        OnMonthYearChanged="Handle_OnMonthYearChanged"
                        chevron="Handle_chevron" />
 
