--- a/ManageGo/Views/AmenitiesListPage.xaml
+++ b/ManageGo/Views/AmenitiesListPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-               xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Name="ThisPage"
@@ -16,6 +16,7 @@
         <Grid RowSpacing="0"   RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height, Factor=1}"
               RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width, Factor=1}">
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -58,12 +59,36 @@
                 <BoxView HeightRequest="1"
                          BackgroundColor="{StaticResource Primary}" />
             </StackLayout>
-            <Button Grid.Row="2" Text="View calendar" Command="{Binding OnViewCalendarTapped}" VerticalOptions="CenterAndExpand" Padding="0,10,0,0" BackgroundColor="{StaticResource Grey-Light-2}"/>
+            <Grid Grid.Row="2" RowSpacing="0" BackgroundColor="White" Padding="8">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="38" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <StackLayout Orientation="Horizontal" Grid.Row="0"  HorizontalOptions="CenterAndExpand">
+                    <Image Source="calendar_blue.png" VerticalOptions="CenterAndExpand"/>
+                    <Label Text="{Binding SelectedDateRangeString}" TextColor="{StaticResource Primary}" VerticalOptions="CenterAndExpand" FontSize="Small" />
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding OnCalFilterButtonTapped}" />
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
+                <ContentView IsVisible="{Binding CalFilterIsvisible}" x:Name="CalContainer" Grid.Row="1" WidthRequest="490" HeightRequest="245"/>
+
+                <StackLayout Grid.Row="2" Orientation="Horizontal"  IsVisible="{Binding CalFilterIsvisible}">
+                    <Button BackgroundColor="Transparent" Text="Cancel" Command="{Binding OnHideCalFilterTapped}" TextColor="{StaticResource Grey-Mid-1}" HorizontalOptions="StartAndExpand"/>
+                    <Button BackgroundColor="Transparent" Text="Reset" Command="{Binding OnResetCalFilterTapped}" TextColor="{StaticResource Grey-Mid-1}" HorizontalOptions="CenterAndExpand"/>
+
+                    <Button BackgroundColor="Transparent" Text="Done" Command="{Binding OnDoneCalFilterTapped}" HorizontalOptions="EndAndExpand" TextColor="{StaticResource Primary}"  />
+                </StackLayout>
+            </Grid>
+            <Button Grid.Row="3" Text="View calendar" Command="{Binding OnViewCalendarTapped}" TextColor="{StaticResource Primary}" VerticalOptions="CenterAndExpand" Padding="0,10,0,0" BackgroundColor="{StaticResource Grey-Light-2}"/>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}"
-                         Grid.Row="3">
+                         Grid.Row="4">
                 <controls:CustomListView ItemsSource="{Binding Bookings}"
                                          SelectionMode="None"
                                          HasUnevenRows="true"
+                                          ItemAppearing="Handle_ItemAppearing"
+                                         ItemTapped="HandleItemTapped"
                                          BackgroundColor="Transparent"
                                          SeparatorVisibility="None"
                                          Margin="22,18,22,18">
@@ -82,8 +107,8 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                         </Grid.ColumnDefinitions>
-                                        <Label Text="•" Grid.Row="0" VerticalOptions="StartAndExpand" VerticalTextAlignment="Start" FontSize="43" Grid.Column="0" Margin="0,-14,0,0" TextColor="{Binding StatusTextColor}"/>
-                                        <Grid Grid.Column="1" Grid.Row="0">
+                                        <Label Text="•" Grid.Row="0" VerticalOptions="StartAndExpand" VerticalTextAlignment="Start" FontSize="43" Grid.Column="0" Margin="{Binding DotMargin, Source={x:Reference ThisPage}}" TextColor="{Binding StatusTextColor}" />
+                                        <Grid Grid.Column="1" Grid.Row="0" InputTransparent="True">
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto" />
                                                 <RowDefinition Height="Auto" />
@@ -92,23 +117,24 @@
                                             </Grid.RowDefinitions>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="*" />
-                                                <ColumnDefinition Width="0.33*" />
+                                                <ColumnDefinition Width="0.34*" />
                                             </Grid.ColumnDefinitions>
                                             <Label Grid.Row="0" Grid.Column="0" Text="{Binding TenantName}" FontSize="Default" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold"/>
-                                            <StackLayout Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
-                                                <Label Text="{Binding AmenityName}" FontSize="Caption" TextColor="{StaticResource Grey-Mid-1}"/>
-                                                <Image  WidthRequest="25" HeightRequest="25" Source="{Binding LinkUrl, Converter={StaticResource UrlToImageSource}}" />
+                                            <StackLayout Orientation="Horizontal" Grid.RowSpan="2" Grid.Column="1">
+                                                <Label Text="{Binding AmenityName}" MaxLines="3" LineBreakMode="TailTruncation" Margin="0,2,0,-5" HorizontalOptions="EndAndExpand" VerticalOptions="StartAndExpand" FontSize="Caption" TextColor="{StaticResource Grey-Mid-1}"/>
+                                                <Image  WidthRequest="25" HeightRequest="25" VerticalOptions="StartAndExpand" HorizontalOptions="End" Source="{Binding LinkUrl, Converter={StaticResource UrlToImageSource}}" />
                                             </StackLayout>
 
                                             <Label Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding DisplayDateTime}" FontSize="Caption" TextColor="{StaticResource Grey-Mid-1}"/>
                                             <BoxView Grid.Row="2" Grid.ColumnSpan="2" HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="{StaticResource Grey-Light-2}" />
                                             <StackLayout Grid.Row="3" Grid.Column="0" Orientation="Horizontal">
-                                                <Image Source="building_grey.png" VerticalOptions="CenterAndExpand"/>
+                                                <Image Source="building_grey.png" VerticalOptions="StartAndExpand"/>
                                                 <Label VerticalOptions="CenterAndExpand" VerticalTextAlignment="End" Text="{Binding DisplayAddress}" FontSize="Caption" TextColor="{StaticResource Grey-Light-1}"/>
                                             </StackLayout>
                                             <Label Grid.Row="3" Grid.Column="1" HorizontalOptions="End" FontSize="Caption" Text="{Binding Status}" TextColor="{Binding StatusTextColor}"/>
                                         </Grid>
                                     </Grid>
+
                                 </Frame>
                             </ViewCell>
                         </DataTemplate>
