--- a/ManageGo/Views/BookingCalendarPage.xaml
+++ b/ManageGo/Views/BookingCalendarPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-               xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Name="ThisPage"
@@ -11,15 +11,12 @@
         <local:UrlToImageSource x:Key="UrlToImageSource" />
         <local:StringToBoolConverter x:Key="StringToBoolConverter" />
         <local:BoolToCheckBoxIconSource x:Key="BoolToCheckBoxIconSource" />
+        <local:InverseBoolConverter x:Key="InverseBoolConverter" />
     </ContentPage.Resources>
 
 
     <Grid RowSpacing="0"
-          BackgroundColor="{StaticResource Off-White}"
-              RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,
-                             Property=Height, Factor=1, Constant=0}"
-              RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,
-                             Property=Width, Factor=1, Constant=0}">
+          BackgroundColor="{StaticResource Off-White}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
@@ -40,7 +37,7 @@
                         VerticalOptions="CenterAndExpand"
                         Image="nav_menu_icon.png" />
             <Image Source="logo.png"
-                       Margin="0,0,0,0"
+                       Margin="-50,0,0,0"
                        VerticalOptions="CenterAndExpand"
                        HorizontalOptions="CenterAndExpand" />
         </StackLayout>
@@ -179,8 +176,9 @@
                 </Frame.GestureRecognizers>
             </Frame>
         </StackLayout>
+        <Label Grid.Row="4" Text="Select amenity to view bookings" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" IsVisible="{Binding SelectPromptIsVisible}"/>
         <ScrollView Grid.Row="4" Padding="12,0,12,0">
-            <Grid RowSpacing="0" BackgroundColor="White" Padding="12,0,12,0">
+            <Grid RowSpacing="0" BackgroundColor="White" Padding="12,0,12,0" IsVisible="{Binding SelectPromptIsVisible, Converter={StaticResource InverseBoolConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
