--- a/ManageGo/Views/MasterMenuPage.xaml
+++ b/ManageGo/Views/MasterMenuPage.xaml
@@ -52,7 +52,7 @@
                 </Grid>
                 <BoxView IsVisible="true" BackgroundColor="{StaticResource Grey-Light-2}"/>
 
-                <Grid Margin="0,0,4,0">
+                <Grid Margin="0,0,4,0" IsVisible="{Binding AmenityMenuIsVisible}">
                     <Label Text="Amenities" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Amenities" Command="{Binding OnAmenitiesTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
